Added French Localized Text - Not Displayed

--- a/Config/Localization/Game_GenerateReports.ini
+++ b/Config/Localization/Game_GenerateReports.ini
@@ -7,6 +7,7 @@ ManifestName=Game.manifest
 ArchiveName=Game.archive
 CulturesToGenerate=en
 CulturesToGenerate=ga-IE
+CulturesToGenerate=fr
 
 [GatherTextStep0]
 CommandletClass=GenerateTextLocalizationReport
