--- a/Config/Localization/Game_Compile.ini
+++ b/Config/Localization/Game_Compile.ini
@@ -12,6 +12,7 @@ bValidateSafeWhitespace=false
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=ga-IE
+CulturesToGenerate=fr
 
 [GatherTextStep0]
 CommandletClass=GenerateTextLocalizationResource
