--- a/Config/Localization/Game_ExportDialogueScript.ini
+++ b/Config/Localization/Game_ExportDialogueScript.ini
@@ -6,6 +6,7 @@ DestinationPath=Content/Localization/Game
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=ga-IE
+CulturesToGenerate=fr
 ManifestName=Game.manifest
 ArchiveName=Game.archive
 DialogueScriptName=GameDialogue.csv
