--- a/Config/Localization/Game_Gather.ini
+++ b/Config/Localization/Game_Gather.ini
@@ -1,8 +1,8 @@
 ; THESE ARE GENERATED FILES, DO NOT EDIT DIRECTLY!
 ; USE THE LOCALIZATION DASHBOARD IN THE UNREAL EDITOR TO EDIT THE CONFIGURATION
 [CommonSettings]
-ManifestDependencies=F:/Program Files/Epic Games/UE_5.1/Engine/Content/Localization/Engine/Engine.manifest
-ManifestDependencies=F:/Program Files/Epic Games/UE_5.1/Engine/Content/Localization/Editor/Editor.manifest
+ManifestDependencies=../../../../../Program Files/Epic Games/UE_5.2/Engine/Content/Localization/Engine/Engine.manifest
+ManifestDependencies=../../../../../Program Files/Epic Games/UE_5.2/Engine/Content/Localization/Editor/Editor.manifest
 SourcePath=Content/Localization/Game
 DestinationPath=Content/Localization/Game
 ManifestName=Game.manifest
@@ -10,6 +10,7 @@ ArchiveName=Game.archive
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=ga-IE
+CulturesToGenerate=fr
 
 [GatherTextStep0]
 CommandletClass=GatherTextFromAssets
