--- a/Config/Localization/Game_ImportDialogue.ini
+++ b/Config/Localization/Game_ImportDialogue.ini
@@ -7,6 +7,7 @@ ArchiveName=Game.archive
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=ga-IE
+CulturesToGenerate=fr
 
 [GatherTextStep0]
 CommandletClass=ImportLocalizedDialogue
